--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
     "babel": "^6.3.26",
     "babel-core": "^6.4.5",
     "babel-loader": "^6.2.1",
+    "babel-plugin-transform-class-properties": "^6.4.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-register": "^6.4.3",
+    "dexie": "^1.2.0",
+    "domready": "^1.0.8",
+    "node-uuid": "^1.4.7",
+    "react": "^0.14.6",
+    "react-dom": "^0.14.6",
     "rimraf": "^2.5.1",
     "webpack": "^1.12.11"
   }
