Adds clock, top sites, very basic layout

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,8 @@
   "manifest_version": 2,
   "permissions": [
     "chrome://favicon/",
-    "tabs"
+    "tabs",
+    "topSites"
   ],
   "icons": {
     "128": "icon/128.png"
