--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "babel-core": "^6.4.5",
     "babel-loader": "^6.2.1",
     "babel-plugin-transform-class-properties": "^6.4.0",
+    "babel-plugin-transform-object-rest-spread": "^6.3.13",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-register": "^6.4.3",
+    "dateformat": "^1.0.12",
     "dexie": "^1.2.0",
     "domready": "^1.0.8",
     "node-uuid": "^1.4.7",
