Use a popup UI over the NTP
Includes a significant structural change to the source, introducing
services and actions.

--- a/manifest.json
+++ b/manifest.json
@@ -17,14 +17,12 @@
     ]
   },
   "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
-  "chrome_url_overrides" : {
-    "newtab": "static/newtab.html"
-  },
   "browser_action": {
     "default_icon": {
       "19": "icon/browserAction/19.png",
       "38": "icon/browserAction/38.png"
     },
-    "default_title": "Sleep this window"
+    "default_title": "Sleep this window",
+    "default_popup": "static/popup.html"
   }
 }
