Match extension's name with landing page

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "tab-sleeper",
+  "name": "tabsleeper",
   "version": "0.0.1",
   "description": "Sleep and wake windows",
   "manifest_version": 2,
