--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "rimraf": "^2.5.2",
+    "uniloc": "^0.3.0",
     "webpack": "^1.12.14"
   }
 }
