--- a/package.json
+++ b/package.json
@@ -3,26 +3,26 @@
   "version": "0.0.0",
   "description": "Sleep and wake windows in Google Chrome",
   "scripts": {
-    "build": "rimraf build && webpack"
+    "build": "webpack"
   },
   "author": "Greg Signal",
   "license": "MIT",
   "devDependencies": {
-    "babel": "^6.5.2",
-    "babel-core": "^6.7.2",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-class-properties": "^6.6.0",
-    "babel-plugin-transform-object-rest-spread": "^6.6.5",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-register": "^6.7.2",
-    "dexie": "^1.3.4",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.16",
+    "dexie": "^2.0.1",
     "domready": "^1.0.8",
     "node-uuid": "^1.4.7",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "rimraf": "^2.5.2",
+    "prop-types": "^15.6.0",
+    "react": "^16.0",
+    "react-dom": "^16.0",
     "uniloc": "^0.3.0",
-    "webpack": "^1.12.14"
+    "webpack": "^3.5"
   }
 }
