--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,12 @@
   "version": "0.0.9",
   "description": "Lightweight tab management",
   "manifest_version": 2,
+  "applications": {
+    "gecko": {
+      "id": "gecko-extension@tabsleeper.com",
+      "strict_min_version": "53.0"
+    }
+  },
   "permissions": [
     "chrome://favicon/",
     "tabs",
