--- a/manifest.json
+++ b/manifest.json
@@ -20,7 +20,7 @@
   "background": {
     "scripts": [
       "vendor/webextension-polyfill.min.js",
-      "build/background.js"
+      "dist/background.js"
     ]
   },
   "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
