--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.19",
+    "clean-webpack-plugin": "^3.0.0",
     "dexie": "^2.0.4",
     "domready": "^1.0.8",
     "node-uuid": "^1.4.7",
@@ -23,6 +23,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "uniloc": "^0.3.0",
-    "webpack": "^3.12.0"
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
   }
 }
