--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.1",
   "description": "Sleep and wake windows in Google Chrome",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack --mode=development",
+    "build:release": "webpack --mode=production"
   },
   "author": "Greg Signal",
   "license": "MIT",
@@ -16,6 +17,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.1.1",
     "dexie": "^2.0.4",
     "domready": "^1.0.8",
     "node-uuid": "^1.4.7",
