Remove old manifest, fix paths

--- a/platform/manifest.common.json
+++ b/platform/manifest.common.json
@@ -13,7 +13,7 @@
   "background": {
     "scripts": [
       "vendor/webextension-polyfill.min.js",
-      "dist/background.js"
+      "build/dist/background.js"
     ]
   },
   "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
