--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.1.1",
+    "copy-webpack-plugin": "^7.0.0",
     "dexie": "^2.0.4",
     "domready": "^1.0.8",
-    "node-uuid": "^1.4.8",
     "prop-types": "^15.7.2",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "uniloc": "^0.3.0",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "uuid": "^8.3.2",
+    "webpack": "^5.11.0",
+    "webpack-cli": "^4.2.0"
   }
 }
