--- a/package.json
+++ b/package.json
@@ -10,11 +10,6 @@
   "author": "Greg Signal",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.8.7",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.8.7",
-    "@babel/preset-react": "^7.8.3",
-    "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
     "dexie": "^3.0.3",
@@ -22,8 +17,11 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "ts-loader": "^8.0.12",
+    "typescript": "^4.1.3",
     "uniloc": "^0.3.0",
     "uuid": "^8.3.2",
+    "web-ext-types": "^3.2.1",
     "webpack": "^5.11.0",
     "webpack-cli": "^4.2.0"
   }
