--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
   "author": "Greg Signal",
   "license": "MIT",
   "devDependencies": {
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
     "dexie": "^3.0.3",
     "domready": "^1.0.8",
-    "prop-types": "^15.7.2",
+    "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "ts-loader": "^8.0.12",
     "typescript": "^4.1.3",
-    "uniloc": "^0.3.0",
     "uuid": "^8.3.2",
     "web-ext-types": "^3.2.1",
     "webpack": "^5.11.0",
