--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   "author": "Greg Signal",
   "license": "MIT",
   "devDependencies": {
+    "@types/lodash": "^4.14.165",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/uuid": "^8.3.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
     "dexie": "^3.0.3",
-    "domready": "^1.0.8",
     "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
