--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,11 @@
 {
   "compilerOptions": {
-    "noImplicitAny": false,
-    // "noImplicitAny": true, // once conversion is done
+    "noImplicitAny": true,
     "module": "es6",
     "moduleResolution": "node",
     "target": "es5",
     "jsx": "react",
     "allowJs": true,
-    "allowSyntheticDefaultImports": true, // remove once conversion is done
     "typeRoots": ["node_modules/@types", "node_modules/web-ext-types"],
     "outDir": "./build/tmp",
     "baseUrl": "./",
