--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
   build:
     working_directory: ~/tabsleeper
     docker:
-      - image: circleci/node:15.4.0
+      - image: cimg/node:20.8.1
     steps:
       - checkout
       - run: ./script/setup
